@@ -1,3 +1,4 @@
+2011-12-28 [ub880d] show-hidden-files in filebrowser (hotkey switch META-PERIOD), prepared configuration file for auto-save-config, configuration file version changed to 1.1
 2011-12-18 [ub880d] 4x4 screen size and scalers
 2011-12-18 [mborik] Tracing statements in video/sound initialization and can be enabled with configure (--enable-trace)
 2011-12-17 [mborik] First public alpha version
